--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,15 @@
+server:
+  port: 8090
 spring:
   datasource:
     driver-class-name: org.postgresql.Driver
     platform: postgres
-    url: jdbc:postgresql://127.0.0.1:5432/postgres
+    url: jdbc:postgresql://127.0.0.1:5432/hypothyro
     username: postgres
-    password: password
+    password: Keelah Se'lai
   jpa:  
     hibernate:  
-      ddl-auto: create-drop  
+      ddl-auto: update  
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
 
