--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     platform: postgres
     url: jdbc:postgresql://127.0.0.1:5432/hypothyro
     username: postgres
-    password: Keelah Se'lai
+    password: password
   jpa:  
     hibernate:  
       ddl-auto: update  
